src/generated/LuvParser.cpp

// Generated from src/Luv.g4 by ANTLR 4.13.2


#include "LuvListener.h"
#include "LuvVisitor.h"

#include "LuvParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct LuvParserStaticData final {
  LuvParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  LuvParserStaticData(const LuvParserStaticData&) = delete;
  LuvParserStaticData(LuvParserStaticData&&) = delete;
  LuvParserStaticData& operator=(const LuvParserStaticData&) = delete;
  LuvParserStaticData& operator=(LuvParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag luvParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<LuvParserStaticData> luvParserStaticData = nullptr;

void luvParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (luvParserStaticData != nullptr) {
    return;
  }
#else
  assert(luvParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<LuvParserStaticData>(
    std::vector<std::string>{
      "program", "topLevel", "moduleDecl", "useStmt", "useTarget", "useList", 
      "modulePath", "visibilityDecl", "externDecl", "statement", "breakStmt", 
      "continueStmt", "block", "structDecl", "structMember", "structField", 
      "enumDecl", "enumVariant", "typeList", "classDecl", "classMember", 
      "classField", "declaration", "interfaceDecl", "interfaceMember", "varDecl", 
      "bindingPatternList", "bindingPattern", "structBindingList", "structBinding", 
      "modifier", "attribute", "memoryHint", "attrList", "attr", "overloadableOp", 
      "funcName", "funcDecl", "typeParams", "params", "param", "type", "typeCore", 
      "ifExpr", "efExpr", "whileExpr", "loopExpr", "forExpr", "returnStmt", 
      "exprStmt", "structInstFields", "assignmentTarget", "singleAssignmentTarget", 
      "expr", "matchCase", "args", "literal", "primary"
    },
    std::vector<std::string>{
      "", "'module'", "'use'", "'from'", "'*'", "'{'", "'}'", "','", "'pub'", 
      "'priv'", "'extern'", "'('", "')'", "':'", "';'", "'break'", "'continue'", 
      "'static'", "'abstract'", "'override'", "'='", "'_'", "'unique'", 
      "'lent'", "'rc_shared'", "'owned_cow'", "'immutable'", "'escaped'", 
      "'!['", "']'", "'stack'", "'heap'", "'rc'", "'arc'", "'gc'", "'pool'", 
      "'rss'", "'+'", "'-'", "'/'", "'%'", "'=='", "'!='", "'<'", "'>'", 
      "'<='", "'>='", "'&'", "'=>'", "'->'", "'['", "'\\u003F'", "'\\u003F\\u003F'", 
      "'int'", "'uint'", "'float'", "'string'", "'char'", "'bool'", "'bit'", 
      "'bytes'", "'ptr'", "'void'", "'tnt'", "'if'", "'else'", "'ef'", "'while'", 
      "'loop'", "'for'", "'in'", "'return'", "'.'", "'super'", "'++'", "'--'", 
      "'as'", "'as!'", "'|>'", "'!'", "'not'", "'~'", "'<<'", "'>>'", "'^'", 
      "'|'", "'&&'", "'and'", "'||'", "'or'", "'asm'", "'+='", "'-='", "'*='", 
      "'/='", "'%='", "'&='", "'|='", "'^='", "'<<='", "'>>='", "'nen'", 
      "'@'", "'::'", "'...'", "'..'", "", "", "", "", "", "", "", "'mut'", 
      "'const'", "'dyn'", "'fn'", "'struct'", "'enum'", "'class'", "'interface'", 
      "'match'", "'rtn'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "AT", "PATH_SEP", "RANGE_INC", "RANGE", "FLOAT", "INT", "STRING", 
      "BACKTICK_STRING", "CHAR", "BOOL", "BYTES_LIT", "MUT", "CONST", "DYN", 
      "FN", "STRUCT", "ENUM", "CLASS", "INTERFACE", "MATCH", "RTN", "IDENTIFIER", 
      "WS", "COMMENT", "LINE_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  luvParserStaticData = std::move(staticData);
}

}

LuvParser::LuvParser(TokenStream *input) : LuvParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

LuvParser::LuvParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  LuvParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *luvParserStaticData->atn, luvParserStaticData->decisionToDFA, luvParserStaticData->sharedContextCache, options);
}

LuvParser::~LuvParser() {
  delete _interpreter;
}

const atn::ATN& LuvParser::getATN() const {
  return *luvParserStaticData->atn;
}

std::string LuvParser::getGrammarFileName() const {
  return "Luv.g4";
}

const std::vector<std::string>& LuvParser::getRuleNames() const {
  return luvParserStaticData->ruleNames;
}

const dfa::Vocabulary& LuvParser::getVocabulary() const {
  return luvParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView LuvParser::getSerializedATN() const {
  return luvParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

LuvParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LuvParser::ProgramContext::EOF() {
  return getToken(LuvParser::EOF, 0);
}

LuvParser::ModuleDeclContext* LuvParser::ProgramContext::moduleDecl() {
  return getRuleContext<LuvParser::ModuleDeclContext>(0);
}

std::vector<LuvParser::TopLevelContext *> LuvParser::ProgramContext::topLevel() {
  return getRuleContexts<LuvParser::TopLevelContext>();
}

LuvParser::TopLevelContext* LuvParser::ProgramContext::topLevel(size_t i) {
  return getRuleContext<LuvParser::TopLevelContext>(i);
}


size_t LuvParser::ProgramContext::getRuleIndex() const {
  return LuvParser::RuleProgram;
}

void LuvParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuvListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void LuvParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuvListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any LuvParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LuvVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

LuvParser::ProgramContext* LuvParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, LuvParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == LuvParser::T__0) {
      setState(116);
      moduleDecl();
    }
    setState(122);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1407237980409652) != 0) || ((((_la - 64) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 64)) & 864687142792823481) != 0)) {
      setState(119);
      topLevel();
      setState(124);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(125);
    match(LuvParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TopLevelContext ------------------------------------------------------------------

LuvParser::TopLevelContext::TopLevelContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LuvParser::UseStmtContext* LuvParser::TopLevelContext::useStmt() {
  return getRuleContext<LuvParser::UseStmtContext>(0);
}

LuvParser::VisibilityDeclContext* LuvParser::TopLevelContext::visibilityDecl() {
  return getRuleContext<LuvParser::VisibilityDeclContext>(0);
}

LuvParser::ExternDeclContext* LuvParser::TopLevelContext::externDecl() {
  return getRuleContext<LuvParser::ExternDeclContext>(0);
}

LuvParser::StatementContext* LuvParser::TopLevelContext::statement() {
  return getRuleContext<LuvParser::StatementContext>(0);
}


size_t LuvParser::TopLevelContext::getRuleIndex() const {
  return LuvParser::RuleTopLevel;
}

void LuvParser::TopLevelContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuvListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTopLevel(this);
}

void LuvParser::TopLevelContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuvListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTopLevel(this);
}


std::any LuvParser::TopLevelContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LuvVisitor*>(visitor))
    return parserVisitor->visitTopLevel(this);
  else
    return visitor->visitChildren(this);
}

LuvParser::TopLevelContext* LuvParser::topLevel() {
  TopLevelContext *_localctx = _tracker.createInstance<TopLevelContext>(_ctx, getState());
  enterRule(_localctx, 2, LuvParser::RuleTopLevel);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(131);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(127);
      useStmt();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(128);
      visibilityDecl();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(129);
      externDecl();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(130);
      statement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ModuleDeclContext ------------------------------------------------------------------

LuvParser::ModuleDeclContext::ModuleDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LuvParser::ModulePathContext* LuvParser::ModuleDeclContext::modulePath() {
  return getRuleContext<LuvParser::ModulePathContext>(0);
}


size_t LuvParser::ModuleDeclContext::getRuleIndex() const {
  return LuvParser::RuleModuleDecl;
}

void LuvParser::ModuleDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuvListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterModuleDecl(this);
}

void LuvParser::ModuleDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuvListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitModuleDecl(this);
}


std::any LuvParser::ModuleDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LuvVisitor*>(visitor))
    return parserVisitor->visitModuleDecl(this);
  else
    return visitor->visitChildren(this);
}

LuvParser::ModuleDeclContext* LuvParser::moduleDecl() {
  ModuleDeclContext *_localctx = _tracker.createInstance<ModuleDeclContext>(_ctx, getState());
  enterRule(_localctx, 4, LuvParser::RuleModuleDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(133);
    match(LuvParser::T__0);
    setState(134);
    modulePath();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UseStmtContext ------------------------------------------------------------------

LuvParser::UseStmtContext::UseStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t LuvParser::UseStmtContext::getRuleIndex() const {
  return LuvParser::RuleUseStmt;
}

void LuvParser::UseStmtContext::copyFrom(UseStmtContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- UseFromStmtContext ------------------------------------------------------------------

LuvParser::UseTargetContext* LuvParser::UseFromStmtContext::useTarget() {
  return getRuleContext<LuvParser::UseTargetContext>(0);
}

LuvParser::ModulePathContext* LuvParser::UseFromStmtContext::modulePath() {
  return getRuleContext<LuvParser::ModulePathContext>(0);
}

LuvParser::UseFromStmtContext::UseFromStmtContext(UseStmtContext *ctx) { copyFrom(ctx); }

void LuvParser::UseFromStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuvListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUseFromStmt(this);
}
void LuvParser::UseFromStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuvListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUseFromStmt(this);
}

std::any LuvParser::UseFromStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LuvVisitor*>(visitor))
    return parserVisitor->visitUseFromStmt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- UsePathStmtContext ------------------------------------------------------------------

LuvParser::ModulePathContext* LuvParser::UsePathStmtContext::modulePath() {
  return getRuleContext<LuvParser::ModulePathContext>(0);
}

LuvParser::UsePathStmtContext::UsePathStmtContext(UseStmtContext *ctx) { copyFrom(ctx); }

void LuvParser::UsePathStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuvListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUsePathStmt(this);
}
void LuvParser::UsePathStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuvListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUsePathStmt(this);
}

std::any LuvParser::UsePathStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LuvVisitor*>(visitor))
    return parserVisitor->visitUsePathStmt(this);
  else
    return visitor->visitChildren(this);
}
LuvParser::UseStmtContext* LuvParser::useStmt() {
  UseStmtContext *_localctx = _tracker.createInstance<UseStmtContext>(_ctx, getState());
  enterRule(_localctx, 6, LuvParser::RuleUseStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(143);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<LuvParser::UseFromStmtContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(136);
      match(LuvParser::T__1);
      setState(137);
      useTarget();
      setState(138);
      match(LuvParser::T__2);
      setState(139);
      modulePath();
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<LuvParser::UsePathStmtContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(141);
      match(LuvParser::T__1);
      setState(142);
      modulePath();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UseTargetContext ------------------------------------------------------------------

LuvParser::UseTargetContext::UseTargetContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t LuvParser::UseTargetContext::getRuleIndex() const {
  return LuvParser::RuleUseTarget;
}

void LuvParser::UseTargetContext::copyFrom(UseTargetContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- UseSetContext ------------------------------------------------------------------

LuvParser::UseListContext* LuvParser::UseSetContext::useList() {
  return getRuleContext<LuvParser::UseListContext>(0);
}

LuvParser::UseSetContext::UseSetContext(UseTargetContext *ctx) { copyFrom(ctx); }

void LuvParser::UseSetContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuvListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUseSet(this);
}
void LuvParser::UseSetContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuvListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUseSet(this);
}

std::any LuvParser::UseSetContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LuvVisitor*>(visitor))
    return parserVisitor->visitUseSet(this);
  else
    return visitor->visitChildren(this);
}
//----------------- UseAllPublicContext ------------------------------------------------------------------

LuvParser::UseAllPublicContext::UseAllPublicContext(UseTargetContext *ctx) { copyFrom(ctx); }

void LuvParser::UseAllPublicContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuvListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUseAllPublic(this);
}
void LuvParser::UseAllPublicContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuvListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUseAllPublic(this);
}

std::any LuvParser::UseAllPublicContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LuvVisitor*>(visitor))
    return parserVisitor->visitUseAllPublic(this);
  else
    return visitor->visitChildren(this);
}
//----------------- UseAllPrivateContext ------------------------------------------------------------------

tree::TerminalNode* LuvParser::UseAllPrivateContext::AT() {
  return getToken(LuvParser::AT, 0);
}

LuvParser::UseAllPrivateContext::UseAllPrivateContext(UseTargetContext *ctx) { copyFrom(ctx); }

void LuvParser::UseAllPrivateContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuvListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUseAllPrivate(this);
}
void LuvParser::UseAllPrivateContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuvListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUseAllPrivate(this);
}

std::any LuvParser::UseAllPrivateContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LuvVisitor*>(visitor))
    return parserVisitor->visitUseAllPrivate(this);
  else
    return visitor->visitChildren(this);
}
//----------------- UseSingleContext ------------------------------------------------------------------

tree::TerminalNode* LuvParser::UseSingleContext::IDENTIFIER() {
  return getToken(LuvParser::IDENTIFIER, 0);
}

LuvParser::UseSingleContext::UseSingleContext(UseTargetContext *ctx) { copyFrom(ctx); }

void LuvParser::UseSingleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuvListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUseSingle(this);
}
void LuvParser::UseSingleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuvListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUseSingle(this);
}

std::any LuvParser::UseSingleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LuvVisitor*>(visitor))
    return parserVisitor->visitUseSingle(this);
  else
    return visitor->visitChildren(this);
}
LuvParser::UseTargetContext* LuvParser::useTarget() {
  UseTargetContext *_localctx = _tracker.createInstance<UseTargetContext>(_ctx, getState());
  enterRule(_localctx, 8, LuvParser::RuleUseTarget);
